Made REST call to get schedule

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="../XamarinAndroidWebviewSpike/packages.config" />
   <repository path="../XamarinSpikeiOS/packages.config" />
   <repository path="../XamrainSpike/packages.config" />
 </repositories>
